test/conformance/chainsaw/imagevalidatingpolicies/report/background/policy.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ImageValidatingPolicy
metadata:
  name: ivpol-report-background-sample
spec:
  evaluation:
    admission:
      enabled: false
    background:
      enabled: true
  validationActions:
  - Audit
  matchConstraints:
    resourceRules:
    - apiGroups:   [apps]
      apiVersions: [v1]
      operations:  [CREATE, UPDATE]
      resources:   [deployments] 
  variables:
    - name: environment
      expression: >-
        has(object.metadata.labels) && 'env' in object.metadata.labels && object.metadata.labels['env'] == 'prod'
  validations:
    - expression: >-
        variables.environment == true
      messageExpression: >-
        'Deployment labels must be env=prod' + (has(object.metadata.labels) && 'env' in object.metadata.labels ? ' but found env=' + string(object.metadata.labels['env']) : ' but no env label is present')
    # - expression: >-
    #     images.containers.map(image, verifyImageSignatures(image, [attestors.notary])).all(e, e > 0)
    #   message: failed to verify image with notary cert
  webhookConfiguration:
    timeoutSeconds: 20
  failurePolicy: Ignore
  imageRules:
    - glob: ghcr.io/*
  attestors:
    - name: notary
      notary:
        certs: |-
          -----BEGIN CERTIFICATE-----
          MIIDTTCCAjWgAwIBAgIJAPI+zAzn4s0xMA0GCSqGSIb3DQEBCwUAMEwxCzAJBgNV
[...]
          uOKpF5rWAruB5PCIrquamOejpXV9aQA/K2JQDuc0mcKz
          -----END CERTIFICATE-----
  attestations:
    - name: sbom
      referrer:
        type: sbom/cyclone-dx
