test/conformance/chainsaw/imagevalidatingpolicies/report/background/report.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  ownerReferences:
  - apiVersion: apps/v1
    kind: Deployment
    name: test-deployment-ivpol-background
scope:
  apiVersion: apps/v1
  kind: Deployment
  name: test-deployment-ivpol-background
results:
- message: Deployment labels must be env=prod but found env=staging
  policy: ivpol-report-background-sample
  result: fail
  scored: true
  source: KyvernoImageValidatingPolicy
summary:
  error: 0
  fail: 1
  pass: 0
  skip: 0
  warn: 0
